# CppTensor

./: CMakeLists.txt  main.cpp  readme.md  test.py
ShapedArray/: base.h  index.cpp  index.hpp  pointer.hpp  shape.cpp  shape.hpp  shapedarray.hpp  shapedarray_arr.cpp  shapedarray_operators.cpp  shapedarray_ref.cpp  shapedrefarray.cpp  shapedrefarray.hpp  simplevector.cpp  simplevector.hpp
autograd/: node_op.cpp  node_op.hpp
shaped/: _array_arr.hpp  _array_idx copy.hpp  _array_idx.hpp  _array_op.hpp  array.hpp  shape.cpp  shape.hpp
tensor/: base.h  maths.hpp  pointer.hpp  shape.cpp  shape.hpp  simplevector.cpp  simplevector.hpp  tensor.cpp  tensor.hpp  tensor_operators.cpp  tensor_reftensor.cpp  tensor_tensor.cpp
utils/: base.h  errors.cpp  errors.h  list.cpp  list.hpp  matmul.hpp  pointer.hpp
